Slime schematics: Fix misspelling

--- a/slime-schematics/index.html
+++ b/slime-schematics/index.html
@@ -32,7 +32,7 @@
                 <p>- <input type="radio" name="d1-imu" value="bno">BNO085 - Fancy but expensive $$$</p>
                 <p>- <input type="radio" name="d1-imu" value="mpu" checked="checked">MPU6050 - Cheap but drifts quite a bit</p>
             </li>
-            <li><p>Auxilliary MPU: <input type="checkbox" name="d1-aux"></p><p>- Allows for a second motion sensor to be connected</p></li>
+            <li><p>Auxilliary Sensor: <input type="checkbox" name="d1-aux"></p><p>- Allows for a second motion sensor to be connected</p></li>
             <li><p>Battery sense: <input type="checkbox" name="d1-battery-sense"></p><p>- The device is able to sense the battery life remaining</p></li>
             <li><p>Charge Diodes: <input type="checkbox" name="d1-charge-diodes"></p><p>- Makes the device safer and allows for usage even when charging</p></li>
         </ul>
