Slime schematics: Add label tags for easier clicking

--- a/slime-schematics/index.html
+++ b/slime-schematics/index.html
@@ -37,12 +37,12 @@
         <ul>
             <li>
                 <p>IMU:</p>
-                <p>- <input type="radio" name="d1-imu" value="bno">BNO085 - Good but expensive $$$</p>
-                <p>- <input type="radio" name="d1-imu" value="mpu" checked="checked">MPU6050 - Cheap but drifts quite a bit</p>
+                <p>- <label><input type="radio" name="d1-imu" value="bno">BNO085</label> - Good but expensive $$$</p>
+                <p>- <label><input type="radio" name="d1-imu" value="mpu" checked="checked">MPU6050</label> - Cheap but drifts quite a bit</p>
             </li>
-            <li><p>Auxilliary Sensor: <input type="checkbox" name="d1-aux"></p><p>- Allows for a second motion sensor to be connected</p></li>
-            <li><p>Battery sense: <input type="checkbox" name="d1-battery-sense"></p><p>- The device is able to sense the battery life remaining using a 180k resistor</p></li>
-            <li><p>Charge Diodes (1N5817): <input type="checkbox" name="d1-charge-diodes"></p><p>- Allows for usage even when charging, and is a useful safety measure</p></li>
+            <li><p><label>Auxilliary Sensor: <input type="checkbox" name="d1-aux"></label></p><p>- Allows for a second motion sensor to be connected</p></li>
+            <li><p><label>Battery sense: <input type="checkbox" name="d1-battery-sense"></label></p><p>- The device is able to sense the battery life remaining using a 180k resistor</p></li>
+            <li><p><label>Charge Diodes (1N5817): <input type="checkbox" name="d1-charge-diodes"></label></p><p>- Allows for usage even when charging, and is a useful safety measure</p></li>
         </ul>
         <div class="chip" id="d1"></div>
         <img src="pics/IMU_ROTATIONixed.png" style="max-width: 100%;">
